fixed spacing above Lnks search results success box AGAIN

--- a/perma_web/static/css/style-responsive.scss
+++ b/perma_web/static/css/style-responsive.scss
@@ -5175,7 +5175,7 @@ td {
         padding: $grid * 3 0 0;
         overflow: visible;
         .alert-success {
-	        padding-top: 0;
+	        margin-top: 0;
         }
     }
 
